<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_hoan_tat_dang_nhap"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#fcf6f6"
    tools:context="com.hcmus.authenticator.HoanTatDangNhapActivity">

    <TextView
        android:text="@string/ban_da_hoan_tat"
        android:textSize="25dp"
        android:layout_margin="20dp"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView10" />

    <TextView
        android:text="@string/thong_bao_hoan_tat"
        android:layout_width="match_parent"
        android:layout_margin="20dp"
        android:layout_height="wrap_content"
        android:id="@+id/textView11" />

    <Button
        android:text="@string/xong"
        android:background="@drawable/doi_mau_button_luc_duoc_nhap_nen_xanh"
        android:layout_gravity="center"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:id="@+id/btnXong" />



</LinearLayout>
