<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_nhap_ma_thu_cong"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="20dp"
    tools:context="com.hcmus.authenticator.NhapMaThuCongActivity">

    <TextView
        android:text="@string/nhap_ten_tai_khoan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvNhapTenTaiKhoan" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/etTenTaiKhoan" />

    <TextView
        android:text="@string/nhap_khoa_cua_ban"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvNhapKhoaCuaBan" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/etNhapKhoaCuaBan" />

    <Button
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:textStyle="bold"
        android:text="@string/nut_them_tai_khoan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="#ffffff"
        android:background="@drawable/doi_mau_button_luc_duoc_nhap_nen_xanh"
        android:id="@+id/btnThem" />
</LinearLayout>
