<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_them_tai_khoan"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context="com.hcmus.authenticator.ThemTaiKhoanActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#ffffff"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_margin="30dp"

        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/icon_person"
        android:id="@+id/imvTaiKhoan" />

    <TextView
        android:text="@string/tieu_de_them_tai_khoan"
        android:layout_marginLeft="30dp"
        android:textColor="#000000"
        android:textSize="25dp"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView7" />

    <TextView
        android:text="@string/noi_dung_them_tai_khoan"
        android:layout_margin="30dp"
        android:textColor="#000000"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView9" />

    <Button
        android:text="@string/nut_quet_ma_vach"
        android:layout_marginLeft="30dp"
        android:gravity="left|center"
        android:background="@drawable/doi_mau_button_luc_duoc_nhap"
        android:drawableLeft="@android:drawable/ic_menu_camera"
        android:drawablePadding="40dp"
        android:textAllCaps="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnQuetQR" />

    <LinearLayout
        android:background="#9e9b9b"
        android:layout_marginLeft="100dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="1dp"></LinearLayout>

    <Button
        android:text="@string/nut_nhap_khoa_duoc_cung_cap"
        android:layout_marginLeft="30dp"
        android:gravity="left|center"
        android:textAllCaps="false"
        android:background="@drawable/doi_mau_button_luc_duoc_nhap"
        android:drawableLeft="@android:drawable/ic_menu_edit"
        android:drawablePadding="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnNhapMaThuCong" />



</LinearLayout>
