<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/howItWorksBackgroundColor"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/HowItWorksTextHeadingStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24.0dip"
            android:layout_marginRight="24.0dip"
            android:layout_marginTop="56.0dip"
            android:gravity="center"
            android:minHeight="32.0dip"
            android:text="@string/howitworks_page_layout_1_title"
            android:id="@+id/textView" />

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="188.0dip"
            android:layout_marginTop="32.0dip"
            android:scaleType="centerCrop"
            android:src="@drawable/howitworks_image_1" />

        <TextView
            style="@style/HowItWorksTextBodyStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24.0dip"
            android:layout_marginRight="24.0dip"
            android:layout_marginTop="16.0dip"
            android:lineSpacingExtra="4.0dip"
            android:text="@string/howitworks_page_layout_1_description_1" />

        <TextView
            style="@style/HowItWorksTextBodyStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24.0dip"
            android:layout_marginLeft="24.0dip"
            android:layout_marginRight="24.0dip"
            android:layout_marginTop="16.0dip"
            android:lineSpacingExtra="4.0dip"
            android:text="@string/howitworks_page_layout_1_description_2" />
    </LinearLayout>
</ScrollView>